# md-streamlit

./: .gitignore
panel/: docker-compose.yml  dockerfile  pyproject.toml
panel/src/panel/: crew.py  crewcomponentsfront.py  crewcontroladorjava.py  crewservicesfront.py  main.py  masterultimo.py
panel/src/panel/common/: read_explore.py
panel/src/panel/config/: agents.yaml  agents_antiguo.yaml  agents_bueno.yaml  tasks.yaml  tasks_antiguo.yaml  tasks_bueno.yaml
panel/src/panel/documentacion/: GEA_MODD_ERWIN.docx  MODELOS.md  NOTE_WS - Documento Contrato de Servicio 3.03.docx  plantilla_definicion_API_OA3.yaml
panel/src/panel/documentacion/erwin/: Erwin.mdx
panel/src/panel/resultados/carpeta_con_buen_openapi/: comportamiento_control_task.txt  datos_negocio_task.txt  estructura_visual_task.txt  logica_negocio_task.txt  models_task.txt  openapi.yaml  requirements_components.txt  requirements_controlador_servicio.txt  requirements_generation_backend.txt  requirements_services.txt
panel/src/panel/resultados/carpeta_entrega_13/: comportamiento_control_task.txt  datos_negocio_task.txt  estructura_visual_task.txt  logs.md  (+6 more)
panel/src/panel/tools/: endpoint_tool.py  retrieval_chain.py
prueba_streamlit/: README.md  pyproject.toml
prueba_streamlit/src/prueba_streamlit/: crew.py  main.py
prueba_streamlit/src/prueba_streamlit/common/: read_explore.py
prueba_streamlit/src/prueba_streamlit/config/: agents.yaml  tasks.yaml
prueba_streamlit/src/prueba_streamlit/documentacion/: ~$A_MODD_ERWIN.docx
prueba_streamlit/src/prueba_streamlit/tools/: retrieval_chain.py
(+1082 files in other folders)
