[tool.poetry]
name = "panel_project"
version = "0.1.0"
description = "panel using crewAI"
authors = ["bollit <tu_correo@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"  
crewai = {extras = ["tools"], version= "^0.70.1"}  
python-dotenv = ">=1.0.0"  
unstructured = ">=0.11.0"  
panel = ">=1.5.4"  
langchain_community = ">=0.2.0,<0.3.0"  
langchain_core = ">=0.2.38,<0.3.0"  
langchain = ">=0.2.16,<0.3.0"  
typing-extensions = ">=4.11"  
nltk= ">=3.8.1"

[tool.poetry.scripts]
prueba_streamlit = "panel.main:run"
run_crew = "panel.main:run"
train = "panel.main:train"
replay = "panel.main:replay"
test = "panel.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"